src/main/solr/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warc-solr
  labels:
    name: warc-solr
